--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1430006A-CE53-4B01-B44D-C40B0E8F74B4}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigTests.cs" />
+    <Compile Include="DiffEngineTests.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTests.cs" />
@@ -70,6 +71,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\SourceFile2.txt" />
+    <Content Include="Resources\SourceFile1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
