--- a/Test/Resources/config
+++ b/Test/Resources/config
@@ -12,3 +12,6 @@
 [remote "origin"]
 	url = git@github.com:pheew/dotgit.git
 	fetch = +refs/heads/master:refs/remotes/origin/master
+[user]
+  name = Test
+  email = dotGitTest@test.com
