--- a/dotGit/dotGit.csproj
+++ b/dotGit/dotGit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3A17B548-0F21-4A0D-A823-A96BDE0A7523}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -44,15 +44,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\Branch.cs" />
-    <Compile Include="Config\Branches.cs" />
-    <Compile Include="Config\ConfigItem.cs" />
-    <Compile Include="Config\ConfigSection.cs" />
+    <Compile Include="Config\ConfigKeys.cs" />
+    <Compile Include="Config\ConfigSections.cs" />
     <Compile Include="Config\Configuration.cs" />
-    <Compile Include="Config\Core.cs" />
-    <Compile Include="Config\Remote.cs" />
-    <Compile Include="Config\Remotes.cs" />
-    <Compile Include="Config\User.cs" />
     <Compile Include="DiffEngine\Diff.cs" />
     <Compile Include="Exceptions\ObjectNotFoundException.cs" />
     <Compile Include="Exceptions\PackFileException.cs" />
