--- a/dotGit/dotGit.csproj
+++ b/dotGit/dotGit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3A17B548-0F21-4A0D-A823-A96BDE0A7523}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -47,7 +47,7 @@
     <Compile Include="Config\ConfigKeys.cs" />
     <Compile Include="Config\ConfigSections.cs" />
     <Compile Include="Config\Configuration.cs" />
-    <Compile Include="DiffEngine\Diff.cs" />
+    <Compile Include="Diff\Diff.cs" />
     <Compile Include="Exceptions\ObjectNotFoundException.cs" />
     <Compile Include="Exceptions\PackFileException.cs" />
     <Compile Include="Exceptions\ParseException.cs" />
