--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ConfigTests.cs" />
     <Compile Include="DiffEngineTests.cs" />
     <Compile Include="Global.cs" />
+    <Compile Include="IndexTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTests.cs" />
     <Compile Include="RepositoryWriteTests.cs" />
